--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +7,27 @@
   <style>
     body {
       font-family: 'Arial', sans-serif;
-      background-color: #f5f5f5;
       margin: 0;
       padding: 0;
       text-align: center;
+      height: 100vh;
+      background-image: url('https://i.ibb.co/7SYLkqG/gambar1.webp'); /* Gambar latar belakang */
+      background-size: cover; /* Menutupi seluruh layar */
+      background-position: center; /* Menjaga gambar berada di tengah */
+      background-repeat: no-repeat;
     }
 
-    .container {
-      margin-top: 50px;
+    .overlay {
+      background-color: rgba(255, 255, 255, 0.8); /* Lapisan transparansi di atas gambar */
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
     }
 
     h1 {
@@ -30,41 +43,26 @@
 
     .menu {
       display: flex;
-      justify-content: center;
-      gap: 20px;
+      flex-direction: column; /* Mengubah menjadi kolom */
+      align-items: center;
+      gap: 10px; /* Mengurangi jarak antar menu */
       margin-bottom: 30px;
     }
 
     .menu-item {
       width: 200px;
-      padding: 20px;
-      background-color: #4CAF50;
+      padding: 10px; /* Memperpendek padding */
+      background-color: rgba(76, 175, 80, 0.8); /* Transparansi pada tombol */
       color: white;
       border-radius: 10px;
       cursor: pointer;
       transition: 0.3s;
+      font-size: 1.2em; /* Mengubah ukuran font */
     }
 
     .menu-item:hover {
-      transform: scale(1.1);
-      background-color: #45a049;
-    }
-
-    .social {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 50px;
-    }
-
-    .social img {
-      width: 50px;
-      height: 50px;
-      transition: transform 0.3s ease;
-    }
-
-    .social img:hover {
-      transform: scale(1.2);
+      transform: scale(1.05); /* Menyesuaikan scale saat hover */
+      background-color: rgba(69, 160, 73, 0.9); /* Warna saat hover */
     }
 
     #popup {
@@ -74,12 +72,15 @@
       left: 50%;
       transform: translate(-50%, -50%);
       width: 300px;
+      max-width: 80%; /* Batas maksimal lebar popup */
       padding: 20px;
       background-color: #fff;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       text-align: left;
       z-index: 999;
       border-radius: 10px;
+      overflow-y: auto; /* Menambahkan scroll jika konten terlalu panjang */
+      max-height: 80vh; /* Batas maksimal tinggi popup */
     }
 
     #popup h3 {
@@ -95,15 +96,28 @@
       cursor: pointer;
       border-radius: 5px;
       transition: background-color 0.3s;
+      float: right; /* Menggeser tombol ke kanan */
     }
 
     #popup button:hover {
       background-color: #45a049;
     }
 
-    #popup a {
-      color: #4CAF50;
-      text-decoration: none;
+    .social {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 10px;
+    }
+
+    .social img {
+      width: 50px;
+      height: 50px;
+      transition: transform 0.3s ease;
+    }
+
+    .social img:hover {
+      transform: scale(1.2);
     }
 
     @keyframes fadeIn {
@@ -114,12 +128,11 @@
         opacity: 1;
       }
     }
-
   </style>
 </head>
 <body>
 
-  <div class="container">
+  <div class="overlay">
     <h1>Jasa Joki</h1>
     <h2>Kami Menyediakan Jasa Joki untuk Berbagai Tugas</h2>
 
@@ -127,12 +140,13 @@
       <div class="menu-item" onclick="showPopup('PPT')">Joki PPT</div>
       <div class="menu-item" onclick="showPopup('Makalah')">Joki Makalah</div>
       <div class="menu-item" onclick="showPopup('Coding')">Joki Coding</div>
+      <div class="menu-item" onclick="showPopup('Terjemah')">Joki Terjemah Dokumen</div>
       <div class="menu-item" onclick="showPopup('Lain-lain')">Jasa Lainnya</div>
     </div>
 
     <div id="popup">
-      <h3 id="popup-title">Title</h3>
-      <p id="popup-content">Content</p>
+      <h3 id="popup-title">Judul</h3>
+      <p id="popup-content">Konten</p>
       <div class="social">
         <a id="wa-link" target="_blank">
           <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
@@ -155,23 +169,27 @@
       let message = '';
       if (service === 'PPT') {
         title.innerHTML = 'Joki PPT';
-        content.innerHTML = 'Harga Joki PPT: Rp 30.000 - Rp 70.000, tergantung tingkat kesulitan. <br>Hubungi kami melalui WhatsApp atau Instagram untuk detail lebih lanjut.';
+        content.innerHTML = 'Harga Joki PPT: Rp 50.000 - Rp 150.000, tergantung tingkat kesulitan. <br>Hubungi kami melalui WhatsApp atau Instagram untuk detail lebih lanjut.';
         message = 'Halo, saya mau joki PPT. Bisa bantu?';
       } else if (service === 'Makalah') {
         title.innerHTML = 'Joki Makalah';
-        content.innerHTML = 'Harga Joki Makalah: Rp 50.000 - Rp 100.000, tergantung tingkat kesulitan. <br>Hubungi kami melalui WhatsApp atau Instagram untuk detail lebih lanjut.';
+        content.innerHTML = 'Harga Joki Makalah: Rp 50.000 - Rp 200.000, tergantung tingkat kesulitan. <br>Hubungi kami melalui WhatsApp atau Instagram untuk detail lebih lanjut.';
         message = 'Halo, saya mau joki Makalah. Bisa bantu?';
       } else if (service === 'Coding') {
         title.innerHTML = 'Joki Coding';
-        content.innerHTML = 'Harga Joki Coding: Rp 50.000 - Rp 200.000, tergantung tingkat kesulitan. <br>Hubungi kami melalui WhatsApp atau Instagram untuk detail lebih lanjut.';
+        content.innerHTML = 'Harga Joki Coding: Rp 50.000 - Rp 300.000, tergantung tingkat kesulitan. <br>Hubungi kami melalui WhatsApp atau Instagram untuk detail lebih lanjut.';
         message = 'Halo, saya mau joki Coding. Bisa bantu?';
+      } else if (service === 'Terjemah') {
+        title.innerHTML = 'Joki Terjemah Dokumen';
+        content.innerHTML = 'Harga Joki Terjemah Dokumen: Rp 50.000 - Rp 200.000, tergantung halaman. <br>Hubungi kami melalui WhatsApp atau Instagram untuk detail lebih lanjut.';
+        message = 'Halo, saya mau joki terjemah dokumen. Bisa bantu?';
       } else if (service === 'Lain-lain') {
         title.innerHTML = 'Jasa Lainnya';
         content.innerHTML = 'Untuk tugas lain-lain, hubungi kami langsung di WhatsApp atau Instagram untuk informasi lebih lanjut.';
         message = 'Halo, saya punya tugas lain. Bisa bantu?';
       }
 
-      // Update WhatsApp link with the message
+      // Update link WhatsApp dengan pesan yang sesuai
       const whatsappNumber = '6285788996875';
       waLink.href = `https://wa.me/${whatsappNumber}?text=${encodeURIComponent(message)}`;
 
