--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       padding: 0;
       text-align: center;
       height: 100vh;
-      background-image: url('https://i.ibb.co/7SYLkqG/gambar1.webp'); /* Gambar latar belakang */
+      background-image: url('https://github.com/ega321/jasa-jokii/blob/main/gambar1.jpeg?raw=true'); /* Gambar latar belakang */
       background-size: cover; /* Menutupi seluruh layar */
       background-position: center; /* Menjaga gambar berada di tengah */
       background-repeat: no-repeat;
