--- a/index.html
+++ b/index.html
@@ -4,65 +4,85 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jasa Joki</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Arial', sans-serif;
+      font-family: 'Roboto', sans-serif;
       margin: 0;
       padding: 0;
       text-align: center;
       height: 100vh;
-      background-image: url('https://github.com/ega321/jasa-jokii/blob/main/gambar1.jpeg?raw=true'); /* Gambar latar belakang */
-      background-size: cover; /* Menutupi seluruh layar */
-      background-position: center; /* Menjaga gambar berada di tengah */
-      background-repeat: no-repeat;
+      background-image: url('https://github.com/ega321/jasa-jokii/blob/main/gambar1.jpeg?raw=true');
+      background-size: cover;
+      background-position: center;
+      position: relative;
     }
 
     .overlay {
-      background-color: rgba(255, 255, 255, 0.8); /* Lapisan transparansi di atas gambar */
+      background-color: rgba(255, 255, 255, 0.8);
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      flex-direction: column;
+      padding: 20px;
     }
 
     h1 {
       font-size: 3em;
       color: #4CAF50;
+      margin: 0;
       animation: fadeIn 2s ease-in-out;
     }
 
     h2 {
       color: #555;
-      margin-bottom: 30px;
+      margin: 10px 0 30px;
     }
 
     .menu {
       display: flex;
-      flex-direction: column; /* Mengubah menjadi kolom */
+      flex-direction: column;
       align-items: center;
-      gap: 10px; /* Mengurangi jarak antar menu */
+      gap: 15px;
       margin-bottom: 30px;
     }
 
     .menu-item {
-      width: 200px;
-      padding: 10px; /* Memperpendek padding */
-      background-color: rgba(76, 175, 80, 0.8); /* Transparansi pada tombol */
+      position: relative;
+      width: 220px;
+      padding: 15px;
+      background-color: rgba(76, 175, 80, 0.8);
       color: white;
-      border-radius: 10px;
+      border-radius: 8px;
       cursor: pointer;
-      transition: 0.3s;
-      font-size: 1.2em; /* Mengubah ukuran font */
+      transition: transform 0.3s, background-color 0.3s;
+      font-size: 1.2em;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
     }
 
     .menu-item:hover {
-      transform: scale(1.05); /* Menyesuaikan scale saat hover */
-      background-color: rgba(69, 160, 73, 0.9); /* Warna saat hover */
+      transform: translateY(-5px);
+      background-color: rgba(69, 160, 73, 1);
+    }
+
+    .menu-item:hover::after {
+      content: attr(data-tooltip);
+      position: absolute;
+      bottom: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: #333;
+      color: white;
+      padding: 5px;
+      border-radius: 5px;
+      white-space: nowrap;
+      z-index: 10;
+      margin-bottom: 5px;
     }
 
     #popup {
@@ -71,16 +91,24 @@
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      width: 300px;
-      max-width: 80%; /* Batas maksimal lebar popup */
+      width: 90%;
+      max-width: 400px;
       padding: 20px;
       background-color: #fff;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
       text-align: left;
       z-index: 999;
       border-radius: 10px;
-      overflow-y: auto; /* Menambahkan scroll jika konten terlalu panjang */
-      max-height: 80vh; /* Batas maksimal tinggi popup */
+      overflow-y: auto;
+      max-height: 80vh;
+      opacity: 0; 
+      transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+    }
+
+    #popup.show {
+      display: block;
+      opacity: 1; 
+      transform: translate(-50%, -50%) scale(1.05);
     }
 
     #popup h3 {
@@ -96,7 +124,7 @@
       cursor: pointer;
       border-radius: 5px;
       transition: background-color 0.3s;
-      float: right; /* Menggeser tombol ke kanan */
+      margin-top: 10px;
     }
 
     #popup button:hover {
@@ -120,6 +148,73 @@
       transform: scale(1.2);
     }
 
+    .rating-container {
+      margin-top: 20px;
+      text-align: center;
+    }
+
+    .stars {
+      display: flex;
+      justify-content: center;
+    }
+
+    .stars input {
+      display: none;
+    }
+
+    .stars label {
+      font-size: 2em;
+      color: #ccc;
+      cursor: pointer;
+    }
+
+    .stars input:checked ~ label {
+      color: #FFD700;
+    }
+
+    .stars label:hover,
+    .stars label:hover ~ label {
+      color: #FFD700;
+    }
+
+    .comment-box {
+      margin-top: 20px;
+    }
+
+    textarea {
+      width: 100%;
+      height: 100px;
+      margin-bottom: 10px;
+      border-radius: 5px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      resize: none;
+    }
+
+    .feedback-message {
+      margin-top: 20px;
+      font-weight: bold;
+      color: #4CAF50;
+      display: none; 
+    }
+
+    .back-to-top {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      padding: 10px 15px;
+      border-radius: 5px;
+      cursor: pointer;
+      display: none; 
+    }
+
+    .back-to-top:hover {
+      background-color: #45a049;
+    }
+
     @keyframes fadeIn {
       from {
         opacity: 0;
@@ -137,16 +232,40 @@
     <h2>Kami Menyediakan Jasa Joki untuk Berbagai Tugas</h2>
 
     <div class="menu">
-      <div class="menu-item" onclick="showPopup('PPT')">Joki PPT</div>
-      <div class="menu-item" onclick="showPopup('Makalah')">Joki Makalah</div>
-      <div class="menu-item" onclick="showPopup('Coding')">Joki Coding</div>
-      <div class="menu-item" onclick="showPopup('Terjemah')">Joki Terjemah Dokumen</div>
-      <div class="menu-item" onclick="showPopup('Lain-lain')">Jasa Lainnya</div>
+      <div class="menu-item" data-tooltip="Jasa Presentasi" onclick="showPopup('PPT')">Joki PPT</div>
+      <div class="menu-item" data-tooltip="Jasa Penulisan" onclick="showPopup('Makalah')">Joki Makalah</div>
+      <div class="menu-item" data-tooltip="Jasa Pemrograman" onclick="showPopup('Coding')">Joki Coding</div>
+      <div class="menu-item" data-tooltip="Jasa Terjemahan" onclick="showPopup('Terjemah')">Joki Terjemah Dokumen</div>
+      <div class="menu-item" data-tooltip="Jasa Lainnya" onclick="showPopup('Lain-lain')">Joki Lainnya</div>
     </div>
 
-    <div id="popup">
+    <div id="popup" class="popup">
       <h3 id="popup-title">Judul</h3>
       <p id="popup-content">Konten</p>
+
+      <div class="rating-container">
+        <h4>Rating:</h4>
+        <div class="stars">
+          <input type="radio" id="star5" name="rating" value="5" onclick="showFeedback('5')">
+          <label for="star5">&#9733;</label>
+          <input type="radio" id="star4" name="rating" value="4" onclick="showFeedback('4')">
+          <label for="star4">&#9733;</label>
+          <input type="radio" id="star3" name="rating" value="3" onclick="showFeedback('3')">
+          <label for="star3">&#9733;</label>
+          <input type="radio" id="star2" name="rating" value="2" onclick="showFeedback('2')">
+          <label for="star2">&#9733;</label>
+          <input type="radio" id="star1" name="rating" value="1" onclick="showFeedback('1')">
+          <label for="star1">&#9733;</label>
+        </div>
+      </div>
+
+      <div class="comment-box">
+        <h4>Komentar:</h4>
+        <textarea id="comment" placeholder="Tambahkan komentar Anda..."></textarea>
+      </div>
+
+      <div class="feedback-message" id="feedback-message"></div>
+
       <div class="social">
         <a id="wa-link" target="_blank">
           <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
@@ -155,8 +274,11 @@
           <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
         </a>
       </div>
+      <button onclick="submitFeedback()">Kirim</button>
       <button onclick="closePopup()">Tutup</button>
     </div>
+
+    <button class="back-to-top" id="back-to-top" onclick="scrollToTop()">Kembali ke Atas</button>
   </div>
 
   <script>
@@ -165,41 +287,79 @@
       const title = document.getElementById('popup-title');
       const content = document.getElementById('popup-content');
       const waLink = document.getElementById('wa-link');
+      const feedbackMessage = document.getElementById('feedback-message');
 
-      let message = '';
-      if (service === 'PPT') {
-        title.innerHTML = 'Joki PPT';
-        content.innerHTML = 'Harga Joki PPT: Rp 50.000 - Rp 150.000, tergantung tingkat kesulitan. <br>Hubungi kami melalui WhatsApp atau Instagram untuk detail lebih lanjut.';
-        message = 'Halo, saya mau joki PPT. Bisa bantu?';
-      } else if (service === 'Makalah') {
-        title.innerHTML = 'Joki Makalah';
-        content.innerHTML = 'Harga Joki Makalah: Rp 50.000 - Rp 200.000, tergantung tingkat kesulitan. <br>Hubungi kami melalui WhatsApp atau Instagram untuk detail lebih lanjut.';
-        message = 'Halo, saya mau joki Makalah. Bisa bantu?';
-      } else if (service === 'Coding') {
-        title.innerHTML = 'Joki Coding';
-        content.innerHTML = 'Harga Joki Coding: Rp 50.000 - Rp 300.000, tergantung tingkat kesulitan. <br>Hubungi kami melalui WhatsApp atau Instagram untuk detail lebih lanjut.';
-        message = 'Halo, saya mau joki Coding. Bisa bantu?';
-      } else if (service === 'Terjemah') {
-        title.innerHTML = 'Joki Terjemah Dokumen';
-        content.innerHTML = 'Harga Joki Terjemah Dokumen: Rp 50.000 - Rp 200.000, tergantung halaman. <br>Hubungi kami melalui WhatsApp atau Instagram untuk detail lebih lanjut.';
-        message = 'Halo, saya mau joki terjemah dokumen. Bisa bantu?';
-      } else if (service === 'Lain-lain') {
-        title.innerHTML = 'Jasa Lainnya';
-        content.innerHTML = 'Untuk tugas lain-lain, hubungi kami langsung di WhatsApp atau Instagram untuk informasi lebih lanjut.';
-        message = 'Halo, saya punya tugas lain. Bisa bantu?';
-      }
-
-      // Update link WhatsApp dengan pesan yang sesuai
-      const whatsappNumber = '6285788996875';
-      waLink.href = `https://wa.me/${whatsappNumber}?text=${encodeURIComponent(message)}`;
-
-      popup.style.display = 'block';
+      title.innerText = `Layanan ${service}`;
+      content.innerText = `Kami menawarkan layanan ${service} dengan kualitas terbaik. Silakan hubungi kami untuk detail lebih lanjut.`;
+      
+      // Update WhatsApp link
+      waLink.href = `https://wa.me/your-number?text=Ingin%20tanya%20tentang%20${service}`;
+      
+      popup.classList.add('show'); // Tampilkan popup
+      feedbackMessage.style.display = 'none'; // Sembunyikan pesan umpan balik
     }
 
     function closePopup() {
-      document.getElementById('popup').style.display = 'none';
+      const popup = document.getElementById('popup');
+      popup.classList.remove('show'); // Sembunyikan popup
+      document.getElementById('comment').value = ''; // Reset komentar
+      document.getElementById('feedback-message').style.display = 'none'; // Sembunyikan pesan umpan balik
+    }
+
+    function showFeedback(rating) {
+      const feedbackMessage = document.getElementById('feedback-message');
+
+      let message = '';
+      switch (rating) {
+        case '5':
+          message = 'Terima kasih banyak! Kami sangat menghargai dukungan Anda.';
+          break;
+        case '4':
+          message = 'Terima kasih! Kami berusaha untuk memberikan yang terbaik.';
+          break;
+        case '3':
+          message = 'Terima kasih! Kami akan terus berusaha untuk meningkatkan layanan kami.';
+          break;
+        case '2':
+          message = 'Maaf jika layanan kami belum memuaskan. Kami akan memperbaiki diri.';
+          break;
+        case '1':
+          message = 'Kami mohon maaf atas ketidakpuasan Anda. Kami akan berusaha lebih baik.';
+          break;
+      }
+
+      feedbackMessage.innerText = message;
+      feedbackMessage.style.display = 'block'; // Tampilkan pesan umpan balik
+    }
+
+    function submitFeedback() {
+      const rating = document.querySelector('input[name="rating"]:checked');
+      const comment = document.getElementById('comment').value;
+
+      if (rating) {
+        const feedbackMessage = document.getElementById('feedback-message');
+        let message = feedbackMessage.innerText;
+
+        message += `\nKomentar: ${comment}`;
+        feedbackMessage.innerText = message; // Tampilkan pesan umpan balik
+        closePopup(); // Tutup popup
+      } else {
+        alert("Silakan pilih rating.");
+      }
+    }
+
+    window.onscroll = function() {
+      const button = document.querySelector('.back-to-top');
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        button.style.display = "block";
+      } else {
+        button.style.display = "none";
+      }
+    };
+
+    function scrollToTop() {
+      window.scrollTo({top: 0, behavior: 'smooth'});
     }
   </script>
-
 </body>
 </html>
