--- a/index.html
+++ b/index.html
@@ -293,7 +293,9 @@
       content.innerText = `Kami menawarkan layanan ${service} dengan kualitas terbaik. Silakan hubungi kami untuk detail lebih lanjut.`;
       
       // Update WhatsApp link
-      waLink.href = `https://wa.me/your-number?text=Ingin%20tanya%20tentang%20${service}`;
+      // Update WhatsApp link
+waLink.href = `https://wa.me/+6285788996875?text=Ingin%20tanya%20tentang%20${service}`;
+
       
       popup.classList.add('show'); // Tampilkan popup
       feedbackMessage.style.display = 'none'; // Sembunyikan pesan umpan balik
