--- a/index.html
+++ b/index.html
@@ -294,7 +294,8 @@
       
       // Update WhatsApp link
       // Update WhatsApp link
-waLink.href = `https://wa.me/+6285788996875?text=Ingin%20tanya%20tentang%20${service}`;
+waLink.href = `https://wa.me/+6285788996875?text=Halo, saya ingin menanyakan lebih lanjut tentang jasa ${service}. Bisakah Anda membantu saya?
+`;
 
       
       popup.classList.add('show'); // Tampilkan popup
