--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="logo-jokiExpress.png" alt="jokiExpress Logo" class="logo-img">
+            <img src="https://i.ibb.co.com/znMMRPD/logo-joki-Express.webp" alt="logo-joki-Express" class="logo-img">
             <h1>jokiExpress</h1>
         </div>
         <nav>
