--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="https://i.ibb.co.com/znMMRPD/logo-joki-Express.webp" alt="logo-joki-Express" class="logo-img">
+            <img src="https://raw.githubusercontent.com/JokiExpress/jasa-jokii/main/logo-jokiExpress.png" alt="logo-jokiExpress" class="logo-img">
             <h1>jokiExpress</h1>
         </div>
         <nav>
@@ -242,12 +242,11 @@
                 <li><a href="#logout" class="logout-btn">Keluar</a></li>
             </ul>
         </nav>
-        <!-- Tombol untuk Mengubah Mode Gelap -->
         <button id="darkModeToggle">
             <i class="fas fa-moon"></i>
         </button>
     </header>
-
+    
     <section id="home" class="hero">
         <h2>Selamat Datang di jokiExpress</h2>
         <p>Kami menyediakan layanan joki untuk berbagai kebutuhan tugasmu!</p>
